# autodiff

./: .gitignore  CMakeLists.txt  README.md  array.hpp  array_utils.hpp  lazy.hpp  main.cpp  matrix.hpp  matrix_utils.hpp  run_build.sh  tensor.hpp  utils.hpp
autodiff/: .clang-format  .gitignore  CMakeLists.txt  README.md  run_build.sh
autodiff/include/autodiff/: functions.h  node.h  ops.h
autodiff/include/autodiff/optimizer/passes/: constant_folding.h  pass.h
autodiff/src/: main.cpp
autodiff/tests/: test_main.cpp
include/ML/: functions.h  node.h
include/autodiff/: concepts.h  functions.h  graph_helpers.h  node.h  ops.h
include/autodiff/optimizer/: README.md  graph_helpers.h  optimizer.h
include/autodiff/optimizer/passes/: common_subexpression_elim.h  constant_folding.h  dead_code_elim.h  pass.h
old_code/: CMakeLists.txt
old_code/include/: lazy.hpp  matrix.hpp  matrix_utils.hpp  tensor.hpp  utils.hpp  vector.hpp  vector_utils.hpp
old_code/mnist/: mnist_loader.hpp
old_code/src/: main.cpp
src/: main.cpp
tests/: autodiff.cpp  optimizer.cpp
